--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,5 +15,12 @@
         <li><%= listing.country %> </li>
 
     </ul>
+    <br />
+    <a href="/listings/<%= listing._id %>/edit">Edit this</a>
+     <br></br>
+    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+     
+        <button>Delete Listing</button>
+    </form>
 </body>
 </html>
