--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap')  */
 body {
    font-family: "Plus Jakarta Sans", sans-serif !important;
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
+}
+.container {
+    flex: 1;
 }
 
 
