--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,3 +96,23 @@ body {
     background-color: white;
 }
 
+.add-btn,
+.edit-btn {
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+.show-img {
+    height: 30vh;
+
+}
+
+.btns {
+    display: flex;
+
+}
+
+.show-card {
+    padding-left: 0;
+    padding-right: 0;
+}
