--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,23 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wanderlust</title>
-</head>
+<% layout("/layouts/boilerplate") -%> 
 <body>
-    <h3>Edit Listings</h3>
-    <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
-        <input type="text" name="listing[title]" value="<%= listing.title %>"><br><br>
-        <textarea name="listing[description]" > <%= listing.description %></textarea><br><br>
-        <input type="text" name="listing[image]" value="<%= listing.image %>"><br><br>
-        <input type="number" name="listing[price]" value="<%= listing.price %>"><br><br>
-        
-        <input type="text" name="listing[location]" value="<%= listing.location %>"><br><br>
-        <input type="text" name="listing[country]" value="<%= listing.country%>"><br><br>
-        <button>Edit</button>
-        
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit your Listing</h3>
+            <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
+                
 
-    </form>
+                <!-- Input field for the title -->
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label><br>
+                    <input 
+                        type="text" 
+                        name="listing[title]" 
+                        value="<%= listing.title %>" 
+                        class="form-control"
+                    >
+                </div>
+
+                <!-- Text area for the description -->
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label><br>
+                    <textarea 
+                        name="listing[description]"  
+                        class="form-control"
+                    ><%= listing.description %></textarea>
+                </div>
+
+                <!-- Input field for the image URL -->
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image</label>
+                    <input 
+                        type="text" 
+                        name="listing[image]" 
+                        value="<%= listing.image %>"
+                        class="form-control"
+                    >
+                </div>
+
+                <!-- Price and Country inputs in the same row -->
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <!-- Price input -->
+                        <label for="price" class="form-label">Price</label><br>
+                        <input 
+                            type="number" 
+                            name="listing[price]"
+                            value="<%= listing.price %>"
+                            class="form-control"
+                        >
+                    </div>
+                    <div class="col-md-6">
+                        <!-- Country input -->
+                        <label for="country" class="form-label">Country</label><br>
+                        <input 
+                            type="text" 
+                            name="listing[country]" 
+                            value="<%= listing.country%>" 
+                            class="form-control"
+                        >
+                    </div>
+                </div>
+
+                <!-- Input field for the location -->
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label><br>
+                    <input 
+                        type="text" 
+                        name="listing[location]" 
+                        value="<%= listing.location %>"
+                        class="form-control"
+                    >
+                </div>
+
+                <!-- Button to submit the form -->
+                <button class="btn btn-dark edit-btn mt-3">Edit</button>
+                <br>
+            </form>
+        </div> 
+    </div>
 </body>
-</html>
+
+
