--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,19 +1,26 @@
 <% layout('/layouts/boilerplate') -%>
-<body>
-    <h3>Lisitng details :</h3>
-    <ul>
-        <li><%= listing.title %> </li>
-        <li><%= listing.description %> </li>
-        <li>&#8377; <%= listing.price.toLocaleString("en-IN") %> </li>
-        <li><%= listing.location %> </li>
-        <li><%= listing.country %> </li>
-
-    </ul>
-    <br />
-    <a href="/listings/<%= listing._id %>/edit">Edit this</a>
-     <br></br>
-    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-     
-        <button>Delete Listing</button>
-    </form>
-</body>
+<div class="row mt-3">
+    <div class="col-8 offset-3">
+        <h3>Listing details</h3>
+    </div>
+    <div class="card col-6 offset-3 show-card">
+        <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing image" />
+        <div class="card-body">
+            <p class="card-text"> 
+                <b><%= listing.title %></b> <br>
+                <%= listing.description %> <br>
+                ₹ <%= listing.price.toLocaleString("en-IN") %><br>
+                <%= listing.location %><br>
+                <%= listing.country %><br>
+            </p>
+        </div>
+    </div>
+    <div class="btns">
+        <a href="/listings/<%= listing._id %>/edit" 
+            class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+      
+        <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+            <button class="btn btn-dark offset-5 edit-btn">Delete</button>
+        </form>
+    </div>
+</div>
