--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,26 +1,90 @@
 <% layout('/layouts/boilerplate') -%>
 <div class="row mt-3">
     <div class="col-8 offset-3">
-        <h3>Listing details</h3>
+        <h3><%= listing.title %></h3>
     </div>
-    <div class="card col-6 offset-3 show-card">
-        <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing image" />
+    <div class="card col-6 offset-3 show-card listing-card">
+        <img
+        src="<%= listing.image %>"
+        class="card-img-top show-img"
+        alt="listing image"
+        />
         <div class="card-body">
-            <p class="card-text"> 
-                <b><%= listing.title %></b> <br>
-                <%= listing.description %> <br>
-                ₹ <%= listing.price.toLocaleString("en-IN") %><br>
-                <%= listing.location %><br>
-                <%= listing.country %><br>
-            </p>
+        <p class="card-text">
+            <%= listing.description %> <br />
+            ₹ <%= listing.price.toLocaleString("en-IN") %><br />
+            <%= listing.location %><br />
+            <%= listing.country %><br />
+        </p>
         </div>
     </div>
     <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" 
-            class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-      
+        <a
+        href="/listings/<%= listing._id %>/edit"
+        class="btn btn-dark col-1 offset-3 edit-btn"
+        >Edit</a
+        >
+
         <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button class="btn btn-dark offset-5 edit-btn">Delete</button>
+        <button class="btn btn-dark offset-5 edit-btn">Delete</button>
         </form>
+    </div>
+    <div class="col-8 offset-3 mb-3">
+        <hr />
+        <h4>Leave a Review</h4>
+        <form
+        action="/listings/<%= listing._id %>/reviews"
+        method="post"
+        novalidate
+        class="needs-validation"
+        >
+        <div class="mb-3 mt-3">
+            <label for="rating" class="form-label">Rating</label>
+            <input
+            type="range"
+            min="1"
+            max="5"
+            id="rating"
+            name="review[rating]"
+            class="form-range"
+            />
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="comment" class="form-label">Comment:</label>
+            <textarea
+            rows="5"
+            cols="30"
+            id="comment"
+            name="review[comment]"
+            class="form-control"
+            required
+            ></textarea>
+            <div class="invalid-feedback">Please provide a valid comment.</div>
+        </div>
+        <button class="btn btn-outline-dark">Submit</button>
+        </form>
+        <hr/>
+
+        <p><b>All Reviews</b></p>
+<div class="row">
+    <% for(let review of listing.reviews) { %>
+        <div class="card col-5 ms-3 mb-3">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title">ashwin</h5>
+                    <span class="text-muted"><%= review.createdAt.toDateString() %></span>
+                </div>
+                <p class="card-text">Rating: <span class="fw-bold"><%= review.rating %> out of 5 stars</span></p>
+                <p class="card-text">Comment: <span class="fw-bold"><%= review.comment %></span></p>
+                <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                    <button type="submit" class="btn btn-sm btn-dark mb-3">Delete</button>
+                </form>
+            </div>
+        </div>
+    <% } %>
+</div>
+
+
+        
     </div>
 </div>
