--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,7 +21,7 @@
     
     <!-- Main content container -->
     <div class="container">
-        <!-- This is where dynamic content will be injected -->
+        <%- include("../includes/flash.ejs") %>
         <%- body %>
     </div>
     
