--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -12,11 +12,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add New Listings</a>
-        
       </div>
-    </div>
+
+        <div class="navbar-nav  ms-auto">
+          <% if(!currentUser) {%>
+          <a class="nav-link" href="/signup">Sign Up</a>
+          <a class="nav-link" href="/login">Login</a>
+          <% } else { %>
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } %>
+        </div>
   </div>
 </nav>
