--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,14 +10,19 @@
         alt="listing image"
         />
         <div class="card-body">
-        <p class="card-text">
-            <%= listing.description %> <br />
-            ₹ <%= listing.price.toLocaleString("en-IN") %><br />
-            <%= listing.location %><br />
-            <%= listing.country %><br />
-        </p>
-        </div>
+            <p class="card-text mt-2">
+                Hosted by <i><%= listing.owner.username %></i>
+            </p>
+            <p class="card-text"><b>Description : </b><%= listing.description %></p>
+            <p class="card-text">
+              <b>Cost : </b>
+              &#8377; <%= listing.price.toLocaleString("en-IN") %> &nbsp;/ night
+            </p>
+            <p class="card-text"><b>Place : </b><%= listing.location %></p>
+            <p class="card-text"><b>Country : </b><%= listing.country %></p>
+          </div>
     </div>
+    <% if(currentUser && currentUser._id.equals(listing.owner._id)) { %>
     <div class="btns">
         <a
         href="/listings/<%= listing._id %>/edit"
@@ -26,11 +31,16 @@
         >
 
         <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button class="btn btn-dark offset-5 edit-btn">Delete</button>
+        <button class="btn btn-dark offset-5 delete-btn">Delete</button>
         </form>
     </div>
+    <% } %>
+   
+
     <div class="col-8 offset-3 mb-3">
+        
         <hr />
+        <% if(currentUser) { %>
         <h4>Leave a Review</h4>
         <form
         action="/listings/<%= listing._id %>/reviews"
@@ -62,8 +72,11 @@
             <div class="invalid-feedback">Please provide a valid comment.</div>
         </div>
         <button class="btn btn-outline-dark">Submit</button>
-        </form>
+        </form>   
         <hr/>
+        <% } %>  
+        
+       
 
         <p><b>All Reviews</b></p>
 <div class="row">
@@ -71,7 +84,7 @@
         <div class="card col-5 ms-3 mb-3">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h5 class="card-title">ashwin</h5>
+                    <h5 class="card-title">@<%= review.author.username %></h5>
                     <span class="text-muted"><%= review.createdAt.toDateString() %></span>
                 </div>
                 <p class="card-text">Rating: <span class="fw-bold"><%= review.rating %> out of 5 stars</span></p>
