--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,106 +1,97 @@
-<% layout("/layouts/boilerplate") -%> 
+<% layout("/layouts/boilerplate") -%>
 <body>
-    <div class="row mt-3">
-        <div class="col-8 offset-2">
-            <h3>Create a new Listing</h3>
-            <form action="/listings" method="post" novalidate class="needs-validation"> 
+  <div class="row mt-3">
+    <div class="col-8 offset-2">
+      <h3>Create a new Listing</h3>
+      <form
+        action="/listings"
+        method="post"
+        novalidate
+        class="needs-validation"
+        enctype="multipart/form-data"
+      >
+        <!-- Input fields for the listing details -->
 
-                <!-- Input fields for the listing details -->
+        <!-- Input field for the title -->
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label><br />
+          <input
+            type="text"
+            name="listing[title]"
+            placeholder="Title"
+            class="form-control"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please provide a title.</div>
+        </div>
 
-                <!-- Input field for the title -->
-                <div class="mb-3">
-                    <label for="title" class="form-label">Title</label><br>
-                    <input 
-                        type="text" 
-                        name="listing[title]" 
-                        placeholder="Title" 
-                        class="form-control"
-                        required
-                    />
-                    <div class="valid-feedback">
-                        Looks good!
-                      </div>
-                      <div class="invalid-feedback">
-                        Please provide a title.
-                    </div>
-                </div>
+        <!-- Text area for the description -->
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label><br />
+          <textarea
+            name="listing[description]"
+            placeholder="Description"
+            class="form-control"
+            required
+          ></textarea>
+          <div class="invalid-feedback">Please provide a description.</div>
+        </div>
 
-                <!-- Text area for the description -->
-                <div class="mb-3">
-                    <label for="description" class="form-label">Description</label><br>
-                    <textarea 
-                        name="listing[description]"  
-                        placeholder="Description"
-                        class="form-control"
-                        required
-                    ></textarea>
-                    <div class="invalid-feedback
-                    ">Please provide a description.</div>
-                </div>
+        <!-- Input field for the image  -->
 
-                <!-- Input field for the image URL -->
-                <div class="mb-3">
-                    <label for="image" class="form-label">Image</label>
-                    <input 
-                        type="text" 
-                        name="listing[image]" 
-                        placeholder="Enter image URL"
-                        class="form-control"
-                    >
-                </div>
+        <div class="mb-3">
+          <label for="image" class="form-label">Upload Listing Image</label>
+          <input type="file" name="listing[image]" class="form-control" />
+        </div>
 
-                <!-- Price and Country inputs in the same row -->
-                <div class="row">
-                    <div class="mb-3 col-md-6">
-                        <!-- Price input -->
-                        <label for="price" class="form-label">Price</label><br>
-                        <input 
-                            
-                            name="listing[price]"
-                            placeholder="1200"
-                            class="form-control"
-                            required
-                        >
-                        <div class="invalid-feedback">
-                            Please provide a valid price.
-                          </div>
-                    </div>
-                
-                    <div class="mb-3 col-md-6">
-                        <!-- Country input -->
-                        <label for="country" class="form-label">Country</label><br>
-                        <input 
-                            type="text" 
-                            name="listing[country]" 
-                            placeholder="India" 
-                            class="form-control"
-                            required
-                        >
-                        <div class="invalid-feedback">
-                            Please provide a valid country name.
-                          </div>
-                    </div>
-                </div>
+        <!-- Price and Country inputs in the same row -->
+        <div class="row">
+          <div class="mb-3 col-md-6">
+            <!-- Price input -->
+            <label for="price" class="form-label">Price</label><br />
+            <input
+              name="listing[price]"
+              placeholder="1200"
+              class="form-control"
+              required
+            />
+            <div class="invalid-feedback">Please provide a valid price.</div>
+          </div>
 
-                <!-- Input field for the location -->
-                <div class="mb-3">
-                    <label for="location" class="form-label">Location</label><br>
-                    <input 
-                        type="text" 
-                        name="listing[location]" 
-                        placeholder="Bengaluru, Karnataka"
-                        class="form-control"
-                        required
-                    >
-                    <div class="invalid-feedback">
-                        Please provide a valid location.
-                      </div>
-                </div>
-            
-                <!-- Button to submit the form -->
-                <button class="btn btn-dark add-btn mt-3">Add</button>
-                <br>
-            </form>
-        </div> 
+          <div class="mb-3 col-md-6">
+            <!-- Country input -->
+            <label for="country" class="form-label">Country</label><br />
+            <input
+              type="text"
+              name="listing[country]"
+              placeholder="India"
+              class="form-control"
+              required
+            />
+            <div class="invalid-feedback">
+              Please provide a valid country name.
+            </div>
+          </div>
+        </div>
+
+        <!-- Input field for the location -->
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label><br />
+          <input
+            type="text"
+            name="listing[location]"
+            placeholder="Bengaluru, Karnataka"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">Please provide a valid location.</div>
+        </div>
+
+        <!-- Button to submit the form -->
+        <button class="btn btn-dark add-btn mt-3">Add</button>
+        <br />
+      </form>
     </div>
+  </div>
 </body>
