--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,3 +118,21 @@ body {
 }
 
 
+#map {
+    height: 400px; 
+    width: 80vh; 
+}
+/* 
+
+#marker {
+    background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+} */
+/* 
+.mapboxgl-popup {
+    max-width: 200px;
+} */
