--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,14 +1,19 @@
 <% layout('/layouts/boilerplate') -%>
+<script>
+    const mapToken = "<%= process.env.MAP_TOKEN %>";
+    const listing = <%- JSON.stringify(listing) %>;
+   
+</script>
+
+
+
+
 <div class="row mt-3">
     <div class="col-8 offset-3">
         <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card listing-card">
-        <img
-        src="<%= listing.image.url %>"
-        class="card-img-top show-img"
-        alt="listing image"
-        />
+        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text mt-2">
                 Hosted by <i><%= listing.owner.username %></i>
@@ -38,9 +43,8 @@
    
 
     <div class="col-8 offset-3 mb-3">
-        
-        <hr />
         <% if(currentUser) { %>
+            <hr />
         <h4>Leave a Review</h4>
         <form
         action="/listings/<%= listing._id %>/reviews"
@@ -84,9 +88,10 @@
         <% } %>  
         
        
-
-        <p><b>All Reviews</b></p>
+        <% if(listing.reviews.length > 0) { %>
+        
 <div class="row">
+    <p><b>All Reviews</b></p>
     <% for(let review of listing.reviews) { %>
         <div class="card col-5 ms-3 mb-3">
             <div class="card-body">
@@ -103,14 +108,18 @@
                 action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
                     <button type="submit" class="btn btn-sm btn-dark mb-3">Delete</button>
                 </form>
-                
-                
             </div>
         </div>
     <% } %>
 </div>
-
-
-        
+<% } %>
     </div>
+<div class="col-6 offset-3 mb-3">
+    
+   <h3>Where you'll be</h3>
+   <div id="map" ></div>
 </div>
+</div>
+
+
+<script src="/js/map.js"></script>
