Added  searching listings

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -33,7 +33,7 @@
         </div>
         <div class="mb-3">
           <P>Original Image Preview</P>
-          <img src="<%= originalImageUrl %>"/> 
+          <img src="<%= originalImageUrl %>" width="300" height="250"/> 
         </div>
         <!-- Input field for the image URL -->
         <div class="mb-3">
